# Application

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  train_model.py
gui/: Dashboard.py  Home.py  Maintenance.py  Model.py  __init__.py
models/: best_model.pkl  model_metadata.json  scaler.pkl
myapp/: Dashboard.py  Home.py  Maintenance.py  Model.py  main.py
myapp/assets/models/: gaussian_naive_bayes_model.joblib
