[project]
name = "application"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "flet[all]==0.14.0",
    "python-dateutil>=2.8.0",
    "click>=8.1.0",
    "scipy>=1.11.0",
]
